refactor: replace ngx-bootstrap w/ ng-bootstrap
ng-bootstrap seems to be better maintained, uses standalone components, and better supports dark mode in Bootstrap 5.

--- a/src/app/common/table/columns/ago-date/ago-date-column.component.html
+++ b/src/app/common/table/columns/ago-date/ago-date-column.component.html
@@ -11,7 +11,7 @@
 		/>
 	</th>
 	<td class="text-nowrap" cdk-cell *cdkCellDef="let obj">
-		<div class="text-nowrap" container="body" tooltip="{{ obj[name] | utcDate: format() }}">
+		<div class="text-nowrap" container="body" ngbTooltip="{{ obj[name] | utcDate: format() }}">
 			{{ obj[name] | agoDate: hideAgo() }}
 		</div>
 	</td>
