--- a/src/app/core/signin/signin.component.html
+++ b/src/app/core/signin/signin.component.html
@@ -29,6 +29,7 @@
 							id="username"
 							name="username"
 							type="text"
+							autocomplete="username"
 							autofocus
 							placeholder="Username"
 							required
@@ -43,6 +44,7 @@
 							id="password"
 							name="password"
 							type="password"
+							autocomplete="current-password"
 							minlength="6"
 							placeholder="Password"
 							required
