--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -86,8 +86,8 @@
 							class="btn btn-link p-0"
 							type="button"
 							container="body"
+							ngbTooltip="Remove Member"
 							placement="left"
-							tooltip="Remove Member"
 							(click)="removeMember(member)"
 						>
 							<span class="fa-solid fa-lg fa-trash"></span>
