--- a/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
+++ b/src/app/common/table/filter/asy-header-typeahead-filter/asy-header-typeahead-filter.component.html
@@ -8,15 +8,15 @@
 	<span
 		class="filter fa-solid fa-list"
 		container="body"
+		ngbTooltip="Apply Filters"
 		placement="bottom"
-		tooltip="Apply Filters"
 		[hidden]="isFiltered()"
 	></span>
 	<span
 		class="filter fa-solid fa-filter"
 		container="body"
+		ngbTooltip="Edit Filters"
 		placement="bottom"
-		tooltip="Edit Filters"
 		[hidden]="!isFiltered()"
 	></span>
 </button>
