--- a/src/app/common/table/sidebar/sidebar.component.html
+++ b/src/app/common/table/sidebar/sidebar.component.html
@@ -5,8 +5,8 @@
 		type="button"
 		aria-label="Close"
 		container="body"
+		ngbTooltip="Close"
 		placement="bottom"
-		tooltip="Close"
 		(click)="open.set(false)"
 	></button>
 </div>
