--- a/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
@@ -25,7 +25,7 @@
 				<button
 					class="btn btn-outline-primary font-weight-bold ms-3"
 					type="button"
-					tooltip="Set Columns"
+					ngbTooltip="Set Columns"
 					(click)="sidebar.toggle()"
 				>
 					<span class="fa-solid fa-columns"></span>
