--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -84,8 +84,8 @@
 					class="btn btn-link p-0"
 					type="button"
 					container="body"
+					ngbTooltip="Remove User"
 					placement="left"
-					tooltip="Remove User"
 					(click)="remove(index)"
 				>
 					<span class="fa-solid fa-lg fa-trash"></span>
