feat: improved styling for dropdowns

--- a/src/app/common/table/actions-menu-column/actions-menu-column.component.html
+++ b/src/app/common/table/actions-menu-column/actions-menu-column.component.html
@@ -2,7 +2,7 @@
 	<th cdk-header-cell *cdkHeaderCellDef></th>
 	<td cdk-cell *cdkCellDef="let item; let index = index">
 		<button
-			class="btn dropdown-toggle dropdown-toggle-hide-caret shadow-none py-0 ps-3"
+			class="btn btn-text dropdown-toggle dropdown-toggle-hide-caret py-0"
 			type="button"
 			[attr.aria-controls]="getMenuId(index)"
 			[cdkMenuTriggerData]="{
