--- a/src/app/common/table/filter/asy-header-date-filter/asy-header-date-filter.component.html
+++ b/src/app/common/table/filter/asy-header-date-filter/asy-header-date-filter.component.html
@@ -1,5 +1,5 @@
 <button
-	class="dropdown-toggle dropdown-toggle-hide-caret"
+	class="btn btn-text dropdown-toggle dropdown-toggle-hide-caret px-2"
 	type="button"
 	cdkOverlayOrigin
 	#trigger
