--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
@@ -1,5 +1,5 @@
 <div class="text-nowrap">
-	<button class="px-0" type="button">
+	<button class="btn btn-text px-0" type="button">
 		<ng-content />
 
 		@if (sortable()) {
