--- a/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
+++ b/src/app/core/admin/feedback/list-feedback/admin-list-feedback.component.html
@@ -98,7 +98,7 @@
 					</th>
 					<td cdk-cell *cdkCellDef="let feedback">
 						<button
-							class="btn dropdown-toggle"
+							class="btn btn-text dropdown-toggle p-0"
 							id="feedback-{{ feedback._id }}-status-menu-btn"
 							type="button"
 							attr.aria-controls="feedback-{{ feedback._id }}-status-menu"
@@ -151,7 +151,7 @@
 					<th asy-sort-header cdk-header-cell *cdkHeaderCellDef>Assignee</th>
 					<td cdk-cell *cdkCellDef="let feedback">
 						<button
-							class="btn dropdown-toggle"
+							class="btn btn-text dropdown-toggle p-0"
 							id="feedback-{{ feedback._id }}-assignee-menu-btn"
 							type="button"
 							attr.aria-controls="feedback-{{ feedback._id }}-assignee-menu"
