--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -47,7 +47,7 @@
 			<th cdk-header-cell *cdkHeaderCellDef>Role</th>
 			<td cdk-cell *cdkCellDef="let member">
 				<button
-					class="btn dropdown-toggle p-0"
+					class="btn btn-text dropdown-toggle p-0"
 					id="add-member-{{ member._id }}-role-menu-btn"
 					type="button"
 					attr.aria-controls="add-member-{{ member._id }}-role-menu"
