--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -46,7 +46,7 @@
 				<td cdk-cell *cdkCellDef="let member">
 					@if (isTeamAdmin()) {
 						<button
-							class="btn dropdown-toggle p-0"
+							class="btn btn-text dropdown-toggle p-0"
 							id="member-{{ member._id }}-role-menu-btn"
 							type="button"
 							attr.aria-controls="member-{{ member._id }}-role-menu"
