--- a/src/app/core/signup/signed-up.component.html
+++ b/src/app/core/signup/signed-up.component.html
@@ -6,8 +6,9 @@
 			active.
 		</p>
 		<p class="col-md-4 offset-4 text-center">
-			You can hang tight for a bit, or <a [routerLink]="['/']">go back home</a> to see if your
-			account is ready...
+			You can hang tight for a bit, or
+			<a class="btn btn-link p-0" routerLink="/">go back home</a> to see if your account is
+			ready...
 		</p>
 	</div>
 </section>
