--- a/src/app/common/table/columns/ago-date/ago-date-column.component.html
+++ b/src/app/common/table/columns/ago-date/ago-date-column.component.html
@@ -1,14 +1,17 @@
 <ng-container cdkColumnDef [sticky]="sticky()" [stickyEnd]="stickyEnd()">
-	<th asy-sort-header cdk-header-cell *cdkHeaderCellDef [sortable]="sortable()">
-		<ng-template #defaultHeaderTemplate>
+	<th cdk-header-cell *cdkHeaderCellDef>
+		<asy-header-sort [sortable]="sortable()">
 			{{ header() ?? (name | titlecase) }}
-		</ng-template>
-		<ng-template
-			[ngTemplateOutlet]="headerTemplate() ?? defaultHeaderTemplate"
-			[ngTemplateOutletContext]="{
-				header: header()
-			}"
-		/>
+		</asy-header-sort>
+		@if (headerTemplate(); as tpl) {
+			<ng-template
+				[ngTemplateOutlet]="tpl"
+				[ngTemplateOutletContext]="{
+					header: header()
+				}"
+			/>
+		}
+		<ng-content />
 	</th>
 	<td class="text-nowrap" cdk-cell *cdkCellDef="let obj">
 		<div class="text-nowrap" container="body" ngbTooltip="{{ obj[name] | utcDate: format() }}">
