--- a/src/app/common/table/columns/expandable-list/asy-expandable-list-column.component.scss
+++ b/src/app/common/table/columns/expandable-list/asy-expandable-list-column.component.scss
@@ -1,13 +1,18 @@
 .list-column-collapsed {
-  .list-item:not(:first-child) {
-    display: none;
-
-  }
+	.list-item:not(:first-child) {
+		display: none;
+	}
 }
 
 .fa-angle-down {
-  transform: scale(1, -1);
-  .list-column-collapsed & {
-    transform: scale(1, 1);
-  }
+	transform: scale(1, -1);
+	.list-column-collapsed & {
+		transform: scale(1, 1);
+	}
+}
+
+.header-text {
+	display: inline-block;
+	position: relative;
+	top: -1px;
 }
