refactor: use utilities from ngxtension library

--- a/src/app/common/table/skeleton-rows/asy-skeleton-rows.component.html
+++ b/src/app/common/table/skeleton-rows/asy-skeleton-rows.component.html
@@ -1,6 +1,6 @@
 <table class="table table-striped">
 	<tbody>
-		@for (e of _rows(); track e) {
+		@for (i of rows() | repeat; track i) {
 			<tr class="skeleton-row">
 				<td>&nbsp;</td>
 			</tr>
