--- a/src/app/core/audit/audit-view-change-modal/audit-view-change-modal.component.html
+++ b/src/app/core/audit/audit-view-change-modal/audit-view-change-modal.component.html
@@ -1,7 +1,7 @@
 <asy-modal
-	title="Changes to {{ auditEntry?.audit?.auditType }} by {{
-		auditEntry?.audit?.actor?.username
-	}} on {{ auditEntry?.created | utcDate }}"
+	title="Changes to {{ auditEntry.audit.auditType }} by {{
+		auditEntry.audit.actor.username
+	}} on {{ auditEntry.created | utcDate }}"
 	hideCancel
 	okText="Close"
 	(cancel)="close()"
@@ -10,11 +10,11 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h4>Before</h4>
-			<pre>{{ auditEntry?.audit?.object?.before | sortObjectKeys | json }}</pre>
+			<pre>{{ auditEntry.audit.object.before | sortObjectKeys | json }}</pre>
 		</div>
 		<div class="col-md-6">
 			<h4>After</h4>
-			<pre>{{ auditEntry?.audit?.object?.after | sortObjectKeys | json }}</pre>
+			<pre>{{ auditEntry.audit.object.after | sortObjectKeys | json }}</pre>
 		</div>
 	</div>
 </asy-modal>
